1. activity_view_appointment_detail.xml 레이아웃 수정 (도착 인증 버튼, marginTop)
2. activity_login.xml 글자 크기 수정

3. activity_edit_appoinment.xml UI 수정

--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -20,38 +20,32 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="380dp"
-                android:layout_height="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="약속을 입력하세요"/>
+                android:layout_marginLeft="3dp"
+                android:text="약속을 설정하세요"/>
 
             <EditText
                 android:id="@+id/titleEdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:layout_marginTop="5dp"
-                android:hint="약속할 내용"/>
+                android:layout_marginTop="15dp"
+                android:hint="약속 제목"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="0dp"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="약속한 시간"
+                    android:text="약속 시간"
                     android:textSize="20dp"
-                    android:layout_marginTop="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:hint="클릭 시 설정 가능!"
-                    android:layout_marginTop="20dp"/>
+                    android:layout_marginTop="30dp"/>
 
             </LinearLayout>
 
@@ -98,16 +92,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="출발지"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="30dp"/>
 
             <Spinner
                 android:id="@+id/startPlaceSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:spinnerMode="dialog"/>
 
             <TextView
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="참석할 친구들"/>
@@ -115,6 +110,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -127,6 +123,7 @@
                     android:id="@+id/addFriendToListBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:text="참여 추가"/>
 
             </LinearLayout>
@@ -141,17 +138,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:text="약속 장소"/>
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/placeSearchEdt"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
                     android:hint="약속 장소를 입력해주세요"/>
@@ -161,9 +158,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
+                    android:layout_gravity="right"
                     android:text="입력"/>
 
-            </LinearLayout>
+            </FrameLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -189,8 +187,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@color/lightblue"
                 android:text="약속 등록하기"/>
-
 
         </LinearLayout>
 
