--- a/app/src/main/res/layout/fragment_my_friends_list.xml
+++ b/app/src/main/res/layout/fragment_my_friends_list.xml
@@ -14,7 +14,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/add_friend_btn"
                 android:padding="10dp"
                 android:layout_width="60dp"
