--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="lavender">#DBD8ED</color>
     <color name="lavender_25">#40DBD8ED</color>
     <color name="lightgreen">#C1DCC6</color>
+    <color name="lightblue">#2294D2</color>
 </resources>
