--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,13 +39,13 @@
             android:hint="비밀번호를 입력하세요"/>
 
         <Button
-            android:textSize="17sp"
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/login_button_background"
-            android:text="로그인"/>
+            android:text="로그인"
+            android:textSize="17sp" />
 
         <Button
             android:textSize="17sp"
