--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -2,6 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -56,11 +57,11 @@
 
                     <ImageView
                         android:id="@+id/socialLoginImg"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@drawable/person_icon"
-                        android:layout_marginTop="7dp"
-                        android:padding="3dp"
+                        android:layout_gravity="center"
+                        android:padding="5dp"
                         android:layout_marginRight="10dp"/>
 
                     <TextView
@@ -69,14 +70,14 @@
                         android:layout_height="wrap_content"
                         android:text="닉네임"
                         android:textSize="19sp"
-                        android:layout_marginTop="10dp"/>
+                        android:layout_gravity="center"/>
 
                     <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@drawable/edit_icon"
-                        android:layout_marginTop="7dp"
-                        android:padding="2dp"
+                        android:layout_gravity="center"
+                        android:padding="5dp"
                         android:layout_marginLeft="10dp"/>
 
                 </LinearLayout>
@@ -97,9 +98,8 @@
 
             </LinearLayout>
 
-
             <TextView
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="40dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#DFDFDF"/>
@@ -230,41 +230,6 @@
                 android:layout_height="1dp"
                 android:background="#DFDFDF"/>
 
-            <LinearLayout
-                android:id="@+id/myFriendLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="내 친구 목록 관리하기"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="20dp"
-                    android:padding="5dp"
-                    android:src="@drawable/change_pencil_icon"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" 관리"
-                    android:textSize="18sp"
-                    android:textColor="@color/black"/>
-
-            </LinearLayout>
-
         </LinearLayout>
 
         <TextView
@@ -282,6 +247,6 @@
             android:layout_marginTop="20dp"
             android:textSize="17sp"/>
 
-
     </LinearLayout>
+
 </layout>
