--- a/app/src/main/res/layout/activity_view_my_place_list.xml
+++ b/app/src/main/res/layout/activity_view_my_place_list.xml
@@ -6,14 +6,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="20dp"
         tools:context=".ViewMyPlaceListActivity">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/myPlaceRecyclerView"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/myPlaceRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/editPlaceImg"
+                android:layout_width="45dp"
+                android:padding="5dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_add"
+                app:civ_border_width="2dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="right|bottom"/>
+
+        </FrameLayout>
+
+
 
     </LinearLayout>
 </layout>
